# EEG-ExPy

./: .buildinfo  .gitignore  .gitmodules  GEMINI.md  LINUX_INSTRUCTIONS.md  Makefile  README.md  README.rst  Untitled.ipynb  changelog.html  conftest.py  docs_notes.html  environment.yml  genindex.html  index.html  link_data.sh  loadplotdata.ipynb  objects.inv  pyproject.toml  requirements-docs.txt  requirements-lite.txt  requirements-noeeg.txt  requirements.txt  requirements_test.txt  run_notebooks.py  search.html  searchindex.js  setup-lite.py  setup.cfg  setup.py  sg_execution_times.html  testing.py  tmp.html
.devcontainer/cpu/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md
.github/workflows/: docs.yml  test.yml
_downloads/18e4b69d6ddc9302425e645c1fec16c3/: 04r__cueing_group_analysis_winter2019.py
_downloads/1f56a155b1a68a196eeb8aea2e0b7517/: 02r__cueing_group_analysis.ipynb
_downloads/2f1a411d3414306e436c6540c86910c5/: 00x__n170_run_experiment.ipynb
_downloads/335ce423c80436163e4a75b13e3dba64/: 00x__ssvep_run_experiment.py
_downloads/482813616f7e52f19737a9e9e4714600/: 01r__ssvep_viz.ipynb
_downloads/4cd288a0df5274e2be1a468e1967a571/: 04r__cueing_group_analysis_winter2019.ipynb
_downloads/679acb9da15a2bd0f1cf78d5dea6995b/: 00x__n170_run_experiment.py
_downloads/6c7787744c46f6694529791768174f35/: 02r__ssvep_decoding.py
_downloads/872178a6cf309a4de1aa7d759d171a7b/: 02r__n170_decoding.ipynb
_downloads/89f5ff349033ec3c3d48bcfb2c3c3de2/: 01r__ssvep_viz.py
_downloads/8d83acdbf2986ad81d4d9e035ff593ef/: 01r__n170_viz.ipynb
_downloads/a74331ba25f1e4b93e2ecf2b3efd4a13/: 02r__ssvep_decoding.ipynb
_downloads/b2ef39fb5bc5abfa985af6266c497c15/: 01r__p300_viz.ipynb
_downloads/b6763bc95c5e2ede1c4ce186cc0c606a/: 00x__p300_run_experiment.ipynb
_downloads/b6fdaf0dd3351d46675abacd38607890/: 00x__p300_run_experiment.py
_downloads/bffc7389ff14934d31aa05a911f58bf0/: 01r__cueing_singlesub_analysis.ipynb
_downloads/c8168bec3b40b12111ac87ce4dfeac13/: 01r__cueing_singlesub_analysis.py
_downloads/c9435ee669e38dd54bad678a26f2c8c1/: 00x__ssvep_run_experiment.ipynb
_downloads/d57fff739827ca575034e03b51d68a54/: 02r__cueing_group_analysis.py
_downloads/d5962f611a1c0434100c2f3706093684/: 02r__n170_decoding.py
_downloads/db47b930ce10faf6f74a13d608925887/: 02r__p300_decoding.ipynb
_downloads/db7df1055da643ad96640e6377001dbf/: 01r__n170_viz.py
_downloads/e500d6e9072380c7b8d43c4a40d8e4f1/: 01r__p300_viz.py
_downloads/e9b19063c25fc9c3a038b9f1dad5d806/: 03r__cueing_behaviour_analysis_winter2019.py
_downloads/fd5112e79635b428992c2be1eb2fdd3a/: 03r__cueing_behaviour_analysis_winter2019.ipynb
_static/: copybutton.js  documentation_options.js
auto_examples/: index.html  sg_execution_times.html
auto_examples/visual_cueing/: 01r__cueing_singlesub_analysis.html  02r__cueing_group_analysis.html  03r__cueing_behaviour_analysis_winter2019.html  04r__cueing_group_analysis_winter2019.html  index.html  sg_execution_times.html
auto_examples/visual_gonogo/: index.html  sg_execution_times.html
auto_examples/visual_n170/: 00x__n170_run_experiment.html  01r__n170_viz.html  02r__n170_decoding.html  index.html  sg_execution_times.html
auto_examples/visual_p300/: 00x__p300_run_experiment.html  01r__p300_viz.html  02r__p300_decoding.html  index.html  sg_execution_times.html
auto_examples/visual_ssvep/: 00x__ssvep_run_experiment.html  01r__ssvep_viz.html  02r__ssvep_decoding.html  index.html  sg_execution_times.html
binder/: environment.yml  postBuild
develop/: .buildinfo  changelog.html  docs_notes.html  genindex.html  index.html  search.html  searchindex.js  sg_execution_times.html
develop/_static/: documentation_options.js  theme_override.css
develop/auto_examples/: index.html  sg_execution_times.html
develop/experiments/: all_examples.html  cueing.html  gonogo.html  vn170.html  vp300.html  vssvep.html
develop/getting_started/: analysis.html  available_experiments.html  data_zipper.html  faq.html  installation.html  loading_and_saving.html  running_experiments.html  streaming.html
develop/misc/: about_the_docs.html  muse_info.html  ntcs_phase1_instructions.html  using_an_extra_electrode_muse.html
doc/: Makefile  changelog.rst  conf.py  docs_notes.md  index.rst
doc/experiments/: all_examples.rst  cueing.rst  decoding.rst  gonogo.rst  vn170.rst  vp300.rst  vssvep.rst
doc/getting_started/: analysis.md  available_experiments.md  available_notebooks.md  data_zipper.md  faq.md  installation.md  installation.rst  loading_and_saving.md  running_experiments.md  setup_overview.md  streaming.md
doc/misc/: UToronto_mobile_eeg_workshop.md  about_the_docs.md  muse_info.md  ntcs_phase1_instructions.md  (+1 more)
eeg_notebooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eegexpy/: __init__.py
eegnb/: __init__.py  __main__.py  cli.py
environments/: eeg-expy-docsbuild.yml  eeg-expy-full.yml  eeg-expy-stimpres.yml  eeg-expy-streaming.yml  eeg-expy-streamstim.yml  environment-docsbuild.yml  environment-full.yml  environment-stimpres.yml  environment-streaming.yml  environment-streamstim.yml
examples/: README.txt
experiments/: all_examples.html  cueing.html  gonogo.html  vn170.html  vp300.html  vssvep.html
getting_started/: analysis.html  available_experiments.html  available_notebooks.html  data_zipper.html  faq.html  installation.html  installation_OLD.html  loading_and_saving.html  running_experiments.html  setup_overview.html  streaming.html
getting_started_OLD/: analysis.html  available_notebooks.html  installation.html  running_experiments.html  streaming.html
misc/: about_the_docs.html  muse_info.html  ntcs_phase1_instructions.html  using_an_extra_electrode_muse.html
notebooks/: Raw_EEG_linux.ipynb  SSVEP_linux.ipynb
psychopy-sounddevice/: README.md  pyproject.toml
psychopy-sounddevice/psychopy_sounddevice/: __init__.py  backend_sounddevice.py
tests/: test_acquisition.py  test_empty.py  test_present_latency.py  test_run_experiments.py  test_stimulus_timing.py
(+270 files in other folders)
